grammar.js
    manifest: $ => optional(
      $._statements,
    ),

    // Collects sequence of elements into a list that the _statements rule can
    // transform (Needed because language supports function calls without
    // parentheses around arguments).

    _statements: $ => choice(
      $.statement,
      seq($._statements, optional(';'), $.statement),
    ),

    block: $ => seq('{', optional($._statements), '}'),

    // This exists to handle multiple arguments to non parenthesized function
    // call. If e is _expression, the a program can consists of e [e,e,e]
    // where the first may be a name of a function to call.

    statement: $ => choice(
      $._assignment,
      $.statement_function,
      seq($.statement, ',', $._assignment),
    ),

    statement_function: $ => seq(
      alias($.statement_function_keywords, $.name),
      choice(
        seq('(', optional($._statement_function_args), ')'),
        alias($._statement_function_args, $.argument_list),
      )
    ),

    _statement_function_args: $ => prec.right(choice(
      alias($._expression, $.argument),
      seq(alias($._expression, $.argument), ',', $._statement_function_args),
    )),

    // Assignment (is right recursive since _assignment is right associative)
    _assignment: $ => prec.right(choice(
      prec(PREC.LOW, $._relationship),
      prec.right(PREC.EQUALS, seq(
        $._relationship,
        field('operator', choice('=', '+=', '-=')),
        $._assignment,
      )),
    )),

    argument: $ => choice(
      $._assignment,
      $.hashpair,
    ),

    _arguments: $ => choice(
      $.argument,
      seq($._arguments, ',', $.argument),
    ),

    argument_list: $ => $._arguments,

    chaining_arrow: $ => choice('->', '~>', '<-', '<~'),

    // Resource

    _resource: $ => choice(
      prec(PREC.LOW, $._expression),
      $.resource_type,
      $.resource_reference,
    ),

    // Foo { }
    resource_reference: $ => prec(PREC.HIGH, seq(
      $._resource,
      '{',
      optional(alias($._attribute_operations, $.attribute_list)),
      optional(','),
      '}',
    )),

    // foo { 'title': }
    resource_type: $ => prec(PREC.HIGH, seq(
      optional(choice(alias('@', $.virtual), alias('@@', $.exported))),
      choice($._resource, $._class),
      '{',
      $._resource_bodies,
      optional(';'),
      '}',
    )),

    resource_body: $ => prec.right(seq(
      $.resource_title,
      ':',
      optional(','),
      optional(alias($._attribute_operations, $.attribute_list)),
      optional(','),
    )),

    resource_title: $ => $._expression,

    _resource_bodies: $ => choice(
      $.resource_body,
      seq($._resource_bodies, ';', $.resource_body),
    ),

    // Expression

    _expression: $ => choice(
      seq('(', $._assignment, ')'),
      $._primary_expression,
      $._bracketed_expression,
      $.function_call,
      $.unary,
      $.binary,
      prec.left(PREC.QMARK, seq(field('lhs', $._expression), $.selector)),
    ),

    binary: $ => choice(
      prec.left(PREC.IN,       seq(field('lhs', $._expression), field('operator', 'in'),  field('rhs',    $._expression))),
      prec.left(PREC.MATCH,    seq(field('lhs', $._expression), field('operator', '=~'),  field('rhs',    $._expression))),
      prec.left(PREC.MATCH,    seq(field('lhs', $._expression), field('operator', '!~'),  field('rhs',    $._expression))),
      prec.left(PREC.ADD,      seq(field('lhs', $._expression), field('operator', '+'),   field('rhs',    $._expression))),
      prec.left(PREC.ADD,      seq(field('lhs', $._expression), field('operator', '-'),   field('rhs',    $._expression))),
      prec.left(PREC.MULTIPLY, seq(field('lhs', $._expression), field('operator', '/'),   field('rhs',    $._expression))),
      prec.left(PREC.MULTIPLY, seq(field('lhs', $._expression), field('operator', '*'),   field('rhs',    $._expression))),
      prec.left(PREC.MULTIPLY, seq(field('lhs', $._expression), field('operator', '%'),   field('rhs',    $._expression))),
      prec.left(PREC.SHIFT,    seq(field('lhs', $._expression), field('operator', '<<'),  field('rhs',    $._expression))),
      prec.left(PREC.SHIFT,    seq(field('lhs', $._expression), field('operator', '>>'),  field('rhs',    $._expression))),
      prec.left(PREC.EQUALITY, seq(field('lhs', $._expression), field('operator', '!='),  field('rhs',    $._expression))),
      prec.left(PREC.EQUALITY, seq(field('lhs', $._expression), field('operator', '=='),  field('rhs',    $._expression))),
      prec.left(PREC.COMPARE,  seq(field('lhs', $._expression), field('operator', '>'),   field('rhs',    $._expression))),
      prec.left(PREC.COMPARE,  seq(field('lhs', $._expression), field('operator', '>='),  field('rhs',    $._expression))),
      prec.left(PREC.COMPARE,  seq(field('lhs', $._expression), field('operator', '<'),   field('rhs',    $._expression))),
      prec.left(PREC.COMPARE,  seq(field('lhs', $._expression), field('operator', '<='),  field('rhs',    $._expression))),
      prec.left(PREC.AND,      seq(field('lhs', $._expression), field('operator', 'and'), field('rhs',    $._expression))),
      prec.left(PREC.OR,       seq(field('lhs', $._expression), field('operator', 'or'),  field('rhs',    $._expression))),
    ),

    _access_elements: $ => choice(
      $.access_element,
      seq($._access_elements, ',', $.access_element),
    ),

    access_element: $ => choice(
      $._expression,
      $.hashpair,
    ),

    // Expressions

    _expressions: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
    ),

    function_call: $ => prec.right(PREC.LOW, seq(
      choice($.name, $.type),
      '(',
      optional(alias($.argument_list_comma, $.argument_list)),
      ')',
      optional($.lambda),
    )),

    // Call Method

    call_method_with_lambda: $ => prec.right(choice(
      $.call_method,
      seq($.call_method, $.lambda),
    )),

    call_method: $ => prec.right(choice(
      seq($.named_access, '(', $.argument_list, ')'),
      seq($.named_access, '(', ')'),
      $.named_access,
    )),

    named_access: $ => seq(
      $._expression,
      field('operator', '.'),
      choice($.name, $.type),
    ),

    // Lambda

    lambda: $ => seq(
      alias($._lambda_parameter_list, $.parameter_list),
      optional($.return_type),
      $.block,
    ),

    _lambda_parameter_list: $ => seq(
      '|',
      optional(seq($._parameters, optional(','))),
      '|',
    ),

    // Conditionals

    // If

    if: $ => seq(
      'if',
      alias($._expression, $.condition),
      $.block,
      repeat($.elsif),
      optional($.else),
    ),

    elsif: $ => seq('elsif', alias($._expression, $.condition), $.block),
    else: $ => seq('else', $.block),

    // Unless

    unless: $ => seq(
      'unless',
      alias($._expression, $.condition),
      $.block,
      optional($.else),
    ),

    // Case Expression

    case: $ => seq('case', $._expression, '{', $._case_options, '}'),

    _case_options: $ => choice(
      $.case_option,
      seq($._case_options, $.case_option),
    ),

    case_option: $ => prec(PREC.HIGH, seq( // Higher than $._expression
      $._expressions,
      ':',
      $.block,
    )),

    // This special construct is required or racc will produce the wrong
    // result when the selector entry LHS is generalized to any _expression
    // (LBRACE looks like a hash). Thus it is not possible to write
    // a selector with a single entry where the entry LHS is a hash.  The
    // SELBRACE token is a LBRACE that follows a QMARK, and this is produced
    // by the lexer with a lookback

    resource_collector: $ => prec.right(seq(
      seq($._expression, $.collect_query),
      optional(seq(
        '{',
        optional(alias($._attribute_operations, $.attribute_list)),
        optional(','),
        '}',
      )),
    )),

    collect_query: $ => choice(
      seq('<|', optional($._expression), '|>'),
      seq('<<|', optional($._expression), '|>>'),
    ),

    // Attribute Operations (Not an _expression)

    _attribute_operations: $ => choice(
      $.attribute,
      seq($._attribute_operations, ',', $.attribute),
    ),

    attribute: $ => choice(
      seq(field('name', $._attribute_name), alias('=>', $.arrow), field('value',$._expression)),
      seq(field('name', $._attribute_name), alias('+>', $.arrow), field('value',$._expression)),
      seq(field('name', '*'), alias('=>', $.arrow), field('value',$._expression)),
    ),

    _attribute_name: $ => choice($.name, $.keyword),

    // Define

    class_definition: $ => seq(
      'class',
      $.classname,
      optional($.parameter_list),
      optional(seq('inherits', choice($.classname, $.default))),
      $.block,
    ),

    // Node

    function_definition: $ => seq(
      'function',
      $.classname,
      optional($.parameter_list),
      optional($.return_type),
      $.block,
    ),

    return_type: $ => seq(
      '>>',
      $.type,
      optional(seq(
        token.immediate('['),
        alias($._access_elements, $.access),
        ']',
      ))
    ),

    // Names and parameters common to several rules

    classname: $ => choice(
      $.name,
      $.type,
      // $.word,   // does not seem to be valid here
    ),

    parameter_list: $ => choice(
      seq('(', ')'),
      seq('(', $._parameters, optional(','), ')'),
    ),

    _parameters: $ => choice(
      $.parameter,
      seq($._parameters, ',', $.parameter),
    ),

    parameter: $ => choice($._untyped_parameter, $.typed_parameter),

    _untyped_parameter: $ => choice($.regular_parameter, $.splat_parameter),

    regular_parameter: $ => choice(
      seq($.variable, field('operator', '='), $._expression),
      $.variable,
    ),

    typed_parameter: $ => seq($._parameter_type, $._untyped_parameter),

    _parameter_type: $ => choice(
      $.type,
      seq(
        $.type,
        token.immediate('['),
        alias($._access_elements, $.access),
        ']',
      ),
    ),

    // Type Alias

    type_alias: $ => prec.right(seq(
      $._type_alias_lhs,
      field('operator', '='),
      choice(
        seq(
          $.type,
          $.hash
        ),
        seq(
          $.type,
          token.immediate('['),
          alias($._access_elements, $.access),
          optional(','),
          ']'
        ),
        $.type,
        $.hash,
        $.array,
      ),
    )),

    _type_alias_lhs: $ => seq('type', $._parameter_type),

    // Type Definition

    variable: $ => choice(
      seq('$', alias($._variable_name, $.name)),
      seq($._interpolation_nosigil_variable, alias($._variable_name, $.name)),
    ),

    _variable_name: _ => token.immediate(/(::)?(\w+::)*\w+/),

    // Reserved words

    single_quoted_string: $ => seq(
      "'",
      repeat(
        choice(
          $._sq_string,
          alias($.sq_escape_sequence, $.escape_sequence,),
        ),
      ),
      "'",
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(
        choice($._dq_string,
          $.interpolation,
          alias($.dq_escape_sequence, $.escape_sequence),
        ),
      ),
      '"',
    ),

    interpolation: $ => choice(
      seq($._interpolation_nobrace_variable, $.variable),
      seq($._interpolation_brace_variable, $._expression, '}'),
      seq($._interpolation_expression, $._expressions, '}'),
    ),

    // The '#' is valid inside a regex and doesn't start a comment here so we
    // need to include that here.
    regex: $ => seq(
      '/',
      field('pattern', repeat(choice(
        '#',
        $._regex_char,
        $._regex_char_escaped))
      ),
      '/',
    ),

    _regex_char: $ => token.immediate(/[^/\\\n\r]/),

    _regex_char_escaped: $ => token.immediate(seq('\\', /./)),

    array: $ => seq(
      '[',
      optional(seq($._collection_entries, optional(','))),
      ']',
    ),

    _collection_entries: $ => choice(
      $._collection_entry,
      seq($._collection_entries, ',', $._collection_entry),
    ),

    hash: $ => choice(
      seq('{', $._hashpairs, '}'),
      seq('{', $._hashpairs, ',', '}'),
      seq('{', '}'),
    ),

    _hashpairs: $ => choice(
      $.hashpair,
      seq($._hashpairs, ',', $.hashpair),
    ),

    hashpair: $ => seq(
      field('key', $._hash_entry),
      alias('=>', $.arrow),
      field('value', $._hash_entry)
    ),

    _hash_entry: $ => seq(
      optional('_'),            // Note: originally not in the Puppet grammar
      choice($._assignment, $.collection_entry_keyword)
    ),

    // Keywords valid as a collection value
    type:     _ => /((::)?[A-Z]\w*)+/,
    name:     _ => /((::)?[a-z]\w*)(::[a-z]\w*)*/,
    _class:   $ => alias('class', $.name),

    number:   _ => /(?:0[xX][0-9A-Fa-f]+|0?\d+(?:\.\d+)?(?:[eE]-?\d+)?)/,
    default:  _ => 'default',
    undef:    _ => 'undef',
    true:     _ => 'true',
    false:    _ => 'false',

    comment: _ => seq('#', /.*/),
  },
})
