test/corpus/chaining-arrows.txt
================================================================================
chaining arrows resources
================================================================================
class{'before':} -> class{'after':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (single_quoted_string))))
    (chaining_arrow)
    (resource_type
      (name)
      (resource_body
        (resource_title
          (single_quoted_string))))))

================================================================================
chaining arrows resource and reference
================================================================================
class{'before':} -> Class['after']
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (single_quoted_string))))
    (chaining_arrow)
    (type)
    (access
      (access_element
        (single_quoted_string)))))

================================================================================
chaining arrows three resources
================================================================================
Package['ntp'] -> File['/etc/ntp.conf'] ~> Service['ntpd']
--------------------------------------------------------------------------------
(manifest
  (statement
    (type)
    (access
      (access_element
        (single_quoted_string)))
    (chaining_arrow)
    (type)
    (access
      (access_element
        (single_quoted_string)))
    (chaining_arrow)
    (type)
    (access
      (access_element
        (single_quoted_string)))))

================================================================================
chaining arrows with collector
================================================================================
Package['ntp'] -> Ntp::Node <||>
--------------------------------------------------------------------------------
(manifest
  (statement
    (type)
    (access
      (access_element
        (single_quoted_string)))
    (chaining_arrow)
    (resource_collector
      (type)
      (collect_query))))
