test/corpus/class-in-class.txt
================================================================================
class in class
================================================================================
class bar {
  class { 'foo': } # class call

  class baz {} # nested class
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (class_definition
      (classname
        (name))
      (block
        (statement
          (resource_type
            (name)
            (resource_body
              (resource_title
                (single_quoted_string)))))
        (comment)
        (statement
          (class_definition
            (classname
              (name))
            (block)))
        (comment)))))
